[package]
name = "tracing-mock-issue-repro"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-mock = "0.1.0-beta.1"
tracing-subscriber = "0.3.19"

[[test]]
name = "repro"
path = "repro.rs"
